fixed compatibility on mobile devices

--- a/src/pages/Press/Press.scss
+++ b/src/pages/Press/Press.scss
@@ -20,7 +20,8 @@
 
       .header {
         display: flex;
-        flex-direction: row;
+        flex-flow: row wrap;
+        flex-direction: row-reverse;
         justify-content: space-between;
         .header-logo {
           .logo {
@@ -36,10 +37,18 @@
       .release-title {
         margin-top: 50px;
         margin-bottom: 50px;
+        @include theme.viewport(medium) {
+          margin-top: 25px;
+          margin-bottom: 25px;
+        }
         h1 {
           font-size: 45px;
           line-height: 50px;
           text-align: center;
+          @include theme.viewport(medium) {
+            font-size: 30px;
+            line-height: 35px;
+          }
         }
       }
     }
@@ -55,7 +64,9 @@
     .below-post {
       display: flex;
       align-items: stretch;
+      flex-flow: row wrap;
       justify-content: space-between;
+      gap: 20px;
       span {
         @include theme.font(title);
         font-size: 16px;
